--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,9 +10,9 @@
       content="Web site created using create-react-app"
     />
     
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     
     <title>React App</title>
   </head>
